--- a/index.html
+++ b/index.html
@@ -7,16 +7,46 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
     html, body, #map { height: 100%; margin: 0; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
     .header {
-      position: absolute; z-index: 1000; left: 10px; top: 10px;
+      position: absolute; z-index: 1100; left: 52px; top: 10px;
       background: rgba(0,0,0,.6); color:#fff; padding: 8px 12px;
-      border-radius: 10px; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      border-radius: 10px;
     }
-    /* Крестик по центру экрана */
+    /* Кнопка меню (выезжающая панель) */
+    .menu-btn {
+      position: absolute; z-index: 1200; left: 10px; top: 10px;
+      width: 36px; height: 36px; border-radius: 10px; border: none;
+      background: rgba(0,0,0,.75); color:#fff; font-size: 20px; line-height: 36px;
+      display: flex; align-items:center; justify-content:center; cursor:pointer;
+    }
+    .menu-btn:active { transform: scale(.98); }
+
+    /* Левая выезжающая панель */
+    .drawer {
+      position: absolute; z-index: 1300; top: 0; left: 0; height: 100%;
+      width: 300px; max-width: 80vw; background: #111; color:#fff;
+      transform: translateX(-102%); transition: transform .25s ease;
+      box-shadow: 0 0 30px rgba(0,0,0,.35);
+      display: flex; flex-direction: column;
+    }
+    .drawer.open { transform: translateX(0); }
+    .drawer header { padding: 12px 14px; font-weight: 700; background: #191919; }
+    .drawer .section { padding: 10px 14px; border-top: 1px solid #222; }
+    .drawer .section h3 { margin: 0 0 8px; font-size: 15px; opacity: .9; }
+    .drawer .list { display: grid; gap: 6px; }
+    .drawer .item {
+      background: #1f1f1f; border: 1px solid #2a2a2a; border-radius: 10px;
+      padding: 8px 10px; cursor: pointer;
+    }
+    .drawer .item:hover { background:#242424; }
+    .drawer .item .t { font-weight: 600; font-size: 14px; }
+    .drawer .item .d { font-size: 12px; opacity:.75; }
+
+    /* Крестик по центру */
     .crosshair {
       position: absolute; z-index: 1000; left: 50%; top: 50%;
-      transform: translate(-50%, -50%);
-      pointer-events: none; /* не перехватывает клики/скролл */
+      transform: translate(-50%, -50%); pointer-events: none;
       width: 34px; height: 34px; opacity: .9;
     }
     /* Панель координат снизу */
@@ -24,14 +54,28 @@
       position: absolute; z-index: 1000; left: 50%; bottom: 10px;
       transform: translateX(-50%);
       background: rgba(0,0,0,.65); color: #fff; padding: 8px 12px;
-      border-radius: 10px; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
-      font-size: 14px; line-height: 1;
+      border-radius: 10px; font-size: 14px; line-height: 1;
     }
   </style>
 </head>
 <body>
+  <button class="menu-btn" id="menuBtn" aria-label="Открыть меню">☰</button>
   <div class="header">ПРИП/ИМ/НАВИП — все точки</div>
-  <!-- Крестик (SVG) фиксирован по центру экрана -->
+
+  <!-- Левая панель -->
+  <aside class="drawer" id="drawer" aria-hidden="true">
+    <header>Разделы</header>
+    <div class="section">
+      <h3>ПРИП Таганрог <span id="cnt-taganrog"></span></h3>
+      <div class="list" id="list-taganrog"></div>
+    </div>
+    <div class="section">
+      <h3>ПРИП Новороссийск <span id="cnt-novoros"></span></h3>
+      <div class="list" id="list-novoros"></div>
+    </div>
+  </aside>
+
+  <!-- Крестик по центру -->
   <svg class="crosshair" viewBox="0 0 34 34" aria-hidden="true">
     <circle cx="17" cy="17" r="1.6" fill="#888" />
     <line x1="17" y1="0"  x2="17" y2="12" stroke="#888" stroke-width="2"/>
@@ -39,6 +83,7 @@
     <line x1="0"  y1="17" x2="12" y2="17" stroke="#888" stroke-width="2"/>
     <line x1="22" y1="17" x2="34" y2="17" stroke="#888" stroke-width="2"/>
   </svg>
+
   <!-- Панель координат -->
   <div class="coords" id="coords">lat: –, lng: –</div>
 
@@ -46,6 +91,7 @@
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
+    // ===== Карта =====
     const map = L.map('map');
     map.setView([55.751244, 37.618423], 11);
 
@@ -54,27 +100,46 @@
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // ===== Загрузка точек из локального файла в корне =====
+    // ===== Загрузка ПРИПов =====
+    let markers = [];          // [{marker, prip, category}]
+    const byId = new Map();
+
     async function loadPrips() {
       try {
         const res = await fetch('./prips.json', { cache: 'no-store' });
         const prips = await res.json();
         renderPrips(prips);
+        buildDrawer(prips);
       } catch (e) { console.error('Не удалось загрузить prips.json', e); }
     }
 
+    function classifyPrip(p) {
+      const hay = ((p.title||'') + ' ' + (p.desc||'')).toUpperCase();
+      if (hay.includes('ПРИП ТАГАНРОГ')) return 'taganrog';
+      if (hay.includes('ПРИП НОВОРОССИЙСК')) return 'novoros';
+      return 'other';
+    }
+
     function renderPrips(prips) {
-      if (!Array.isArray(prips)) return;
-      const markers = [];
-      prips.forEach(p => {
+      // удалить старые
+      markers.forEach(m => map.removeLayer(m.marker));
+      markers = [];
+
+      const arr = Array.isArray(prips) ? prips : [];
+      const leafs = [];
+
+      arr.forEach(p => {
         if (typeof p.lat !== 'number' || typeof p.lng !== 'number') return;
-        const m = L.marker([p.lat, p.lng])
-          .addTo(map)
+        const m = L.marker([p.lat, p.lng]).addTo(map)
           .bindPopup(`<b>${escapeHtml(p.title || 'Без названия')}</b><br>${escapeHtml(p.desc || '')}`);
-        markers.push(m);
+        const cat = classifyPrip(p);
+        markers.push({ marker: m, prip: p, category: cat });
+        byId.set(p.id || `${p.lat},${p.lng}`, m);
+        leafs.push(m);
       });
-      if (markers.length) {
-        const group = L.featureGroup(markers);
+
+      if (leafs.length) {
+        const group = L.featureGroup(leafs);
         map.fitBounds(group.getBounds().pad(0.2));
       }
     }
@@ -85,17 +150,66 @@
       }[c]));
     }
 
-    // ===== Динамические координаты внизу (центр карты) =====
+    // ===== Панель слева =====
+    const drawer = document.getElementById('drawer');
+    const btn = document.getElementById('menuBtn');
+    btn.addEventListener('click', () => {
+      const open = !drawer.classList.contains('open');
+      drawer.classList.toggle('open', open);
+      drawer.setAttribute('aria-hidden', String(!open));
+    });
+
+    function buildDrawer(prips) {
+      const listTag = document.getElementById('list-taganrog');
+      const listNov = document.getElementById('list-novoros');
+      const cntTag = document.getElementById('cnt-taganrog');
+      const cntNov = document.getElementById('cnt-novoros');
+      listTag.innerHTML = ''; listNov.innerHTML = '';
+
+      const tag = prips.filter(p => classifyPrip(p)==='taganrog');
+      const nov = prips.filter(p => classifyPrip(p)==='novoros');
+      cntTag.textContent = tag.length ? `(${tag.length})` : '';
+      cntNov.textContent = nov.length ? `(${nov.length})` : '';
+
+      const makeItem = (p) => {
+        const div = document.createElement('div');
+        div.className = 'item';
+        div.innerHTML = `<div class="t">${escapeHtml(p.title||'Без названия')}</div>
+                         <div class="d">${escapeHtml(p.desc||'')}</div>`;
+        div.onclick = () => {
+          map.setView([p.lat, p.lng], Math.max(map.getZoom(), 12), { animate: true });
+          const m = byId.get(p.id || `${p.lat},${p.lng}`);
+          if (m) m.openPopup();
+        };
+        return div;
+      };
+
+      tag.forEach(p => listTag.appendChild(makeItem(p)));
+      nov.forEach(p => listNov.appendChild(makeItem(p)));
+    }
+
+    // ===== Морской формат координат внизу =====
     const coordsEl = document.getElementById('coords');
+
+    function toDMM(val, isLat){
+      const hemi = isLat ? (val>=0 ? 'N' : 'S') : (val>=0 ? 'E' : 'W');
+      const abs = Math.abs(val);
+      const deg = Math.floor(abs);
+      const min = (abs - deg) * 60;                 // десятичные минуты
+      // формат с запятой как разделителем десятых минут
+      const minStr = min.toFixed(2).replace('.', ',');
+      return `${deg}°${minStr}' ${hemi}`;
+    }
+
     function updateCenterCoords() {
       const c = map.getCenter();
-      coordsEl.textContent = `lat: ${c.lat.toFixed(6)}, lng: ${c.lng.toFixed(6)}  |  zoom: ${map.getZoom()}`;
+      coordsEl.textContent = `${toDMM(c.lat, true)},  ${toDMM(c.lng, false)}  |  zoom: ${map.getZoom()}`;
     }
     map.on('move', updateCenterCoords);
     map.on('zoom', updateCenterCoords);
     map.whenReady(() => { updateCenterCoords(); });
 
-    // Авто-обновление данных раз в минуту
+    // ===== Старт =====
     loadPrips();
     setInterval(loadPrips, 60000);
   </script>
